# mirage

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  noxfile.py  paths.example.yaml  pyproject.toml  requirements.txt
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml  pages.yml
control/: README.md  __init__.py  act.py  adaptive.py  bc.py  demos.py  diffusion_policy.py  diffusion_schedule.py  edge.py  experiment.py  expert.py  point_mass.py  policy_compare.py
control/sim/: __init__.py  isaac_gap.py  isaac_reach.py
core/: __init__.py  cli_config.py  compute.py  config.py  geometry.py  invariants.py  method.py  metrics.py  obs.py  policy.py  reference_policy.py  rollout.py
core/data/: dataset.py  defects.py  mvtec.py  preprocess.py  store.py  synth.py
core/data/dynamic/: README.md  defects.py  generate_twin_synth.py  reconstruct.py  render_twin.py  sensor_noise.py  twin_geom.py  twin_obj.py
core/data/static/: dataset.py  preprocess.py  store.py  synth.py
core/twin/: reconstruct.py
deploy/: README.md  compile_ops.json  export_ops.json  fit_matrix.json  index.html  models_params.json
deploy/accelerators/: cpu_params.json  gpu_params.json  npu_fixed_params.json  npu_soc_params.json
deployment/: README.md  fit_matrix.json
deployment/accelerators/: cpu_params.json  npu_fixed_params.json  npu_soc_params.json
devtools/: README.md  data_clumps.py  graph.py  jscpd.json  lcom.py  sgconfig.yml  state_candidates.py
devtools/sg-rules/: py-top-level-function.yml
docs/: DEPLOY_PROJECTION.json  PLAN.md  RESULTS.json  RESULTS.md  ROADMAP.md  STRUCTURE.md
docs/architecture/: graph.json
docs/deployment/: ACCELERATOR_SPECS.json  BANK_MEMORY.json  MODEL_FOOTPRINT.json  projection.json
interpretations/: README.md
interpretations/control/: 2026-07-16_policy-gap.md  2026-07-18_edge-vla.md  2026-07-18_paradigm-gap.md
interpretations/deploy/: 2026-07-15_deploy-cost-model.md
interpretations/detector/: 2026-07-06_feature-space-vs-pixel-reconstruction.md  2026-07-15_weighted-fusion.md
interpretations/sim-to-real/: 2026-07-08_sim-to-real-triad.md
interpretations/twin/: 2026-07-15_twin-vs-classical.md  2026-07-18_source-verdict.md
learning/: 2026-06-25_fpfh-and-neighborhoods.md  2026-07-06_3d-data-representation.md  2026-07-06_draem-synthesis-comparison.md  2026-07-06_feature-space-vs-pixel-reconstruction.md  2026-07-06_normals-and-curvature.md  2026-07-06_realism-hurts-draem.md  2026-07-06_structured-light-sensing-and-noise.md  2026-07-08_sim-to-real-triad.md  README.md  field-map.md
mirage/: config.py  tracking.py
mirage/data/: dataset.py  mvtec.py  store.py
mirage/evaluation/: diagnostics.py  evaluate.py  harness.py  metrics.py  scoring.py
mirage/experiments/: run_all.py  run_btf.py  run_draem.py  run_featrecon.py  run_fused.py  run_patchcore.py
mirage/models/: draem.py  fpfh_bank.py  inpaint.py  patchcore.py  vae.py
mirage/training/: hparams.py  losses.py  run_all.py  run_btf.py  run_featrecon.py  run_fused.py  run_patchcore.py  train.py  train_inpaint.py
mirage/visualization/: export_web.py  show.py
pointcloud-viewer/: README.md  index.html
research/: NOTICE_BOARD.md  README.md
research/deep_dives/: 2026-06-29_3d-anomaly-sota-and-sim2real-benchmark.md  2026-07-06_mvtec3d-sota.md  2026-07-08_edge_accelerator_landscape.md  2026-07-08_patchcore_bank_on_npu.md  2026-07-09_m3dm-integration.md  2026-07-14_mvtec3d-ad-sota-verification.md  2026-07-15_edge_accelerator_datasheets.md  2026-07-15_isaac6-headless-sdg.md  2026-07-16_edge_op_support_compiled.md
scripts/: look_at_sample.py
sim/: README.md  __init__.py  generate_twin_synth.py  isaac_gap.py  isaac_reach.py  pyproject.toml  render_twin.py  smoke_init.py  smoke_replicator.py  twin_geom.py  twin_obj.py
sim/control/: isaac_gap.py
sim/datagen/: __init__.py  generate_twin_synth.py  render_twin.py
sim/tests/: test_boot_smoke.py
sim/tests/unit/: test_twin_geom.py
surfscan/: config.py  dispatch.py  method_cli.py  report.py  run.py  tracking.py  viz.py
surfscan/data/: dataset.py  mvtec.py  store.py  synth.py
surfscan/deploy/: __init__.py  __main__.py  accelerators.py  bank.py  compile_probe.py  export.py  fit.py  profile.py  projection.py  schema.py
surfscan/evaluation/: diagnostics.py  evaluate.py  harness.py  invariants.py  metrics.py  modelcard.py  predictions.py  recompute.py  result_types.py  results.py  scoring.py  sync_numbers.py
surfscan/experiments/: registry.py  run_all.py  run_btf.py  run_draem.py  run_featrecon.py  run_fused.py  run_patchcore.py  run_pointmae.py  run_triad.py  triad_summary.py
surfscan/models/: coreset.py  draem.py  feat_ae.py  feat_recon.py  fpfh_bank.py  inpaint.py  patchcore.py  pointmae.py  pointmae_group.py  vae.py
surfscan/training/: curriculum.py  hparams.py  losses.py  train.py  train_inpaint.py  trainer.py
surfscan/visualization/: export_web.py  show.py
tests/: README.md  test_harness.py  test_metrics.py  test_preprocess.py
tests/e2e/: test_run_smoke.py
tests/integration/: test_bootstrap_scorearrays.py  test_btf_pipeline.py  test_method_class_to_harness.py  test_pointmae_loader.py  test_preprocess_to_dataset.py
tests/integration/sim/: test_boot_smoke.py
tests/unit/: test_adapters.py  test_cli_config.py  test_compute.py  test_config.py  test_curriculum.py  test_dataset.py  test_defects.py  test_dispatch.py  test_entrypoints.py  test_fpfh.py  test_harness.py  test_hparams.py  test_invariants.py  test_losses.py  test_method_cli.py  test_metrics.py  test_modelcard.py  test_models.py  test_obs.py  test_patchcore.py  test_pointmae_group.py  test_preprocess.py  test_results.py  test_scoring.py  test_scoring_maps.py  test_store.py  test_sync_numbers.py  test_tracking.py  test_train_cpu.py  test_trainer.py  test_triad.py
tests/unit/control/: test_act.py  test_adaptive.py  test_bc.py  test_demos.py  test_diffusion_policy.py  test_diffusion_schedule.py  test_edge.py  test_experiment.py  test_expert.py  test_point_mass.py
tests/unit/core/: test_config.py  (+6 more)
(+39 files in other folders)
