[project]
name = "surfscan"
version = "0.1.0"
description = "A physics-based synthetic-data engine for 3D perception: generate defect scenes, detect anomalies, measure the sim-to-real gap honestly. Edge-deployable."
readme = "README.md"
requires-python = ">=3.11,<3.13"   # open3d ships cp311/cp312 wheels only (no cp313 yet)
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "tifffile",     # MVTec 3D-AD xyz position maps (3-channel float TIFF)
    "pillow",       # rgb / gt PNGs
    "matplotlib",
    "tqdm",
    "open3d",       # point-cloud processing + the look-at-the-data viewer
    "scikit-learn", # image AUROC (evaluation/metrics.py)
    "polars",       # data store + splits (mirror of systole's cardioseg/data)
    "pydantic>=2",  # validated hyperparameter configs
    "omegaconf",    # paths.yaml config loader (one-root data path)
    "mlflow",       # canonical experiment tracking (params/metrics/artifacts/models; `mlflow ui`)
    "jaxtyping",   # Float[Tensor,"B C H W"] shape/dtype annotations — inert at runtime without a checker (no prod cost)
    "beartype",    # the runtime checker jaxtyping delegates to; wrap as @shapecheck in your types module (see devtools/README)
    # torch >=2.7 required for NVIDIA Blackwell (sm_120, RTX 5090). The CUDA build comes from the
    # PyTorch index (see [tool.uv.sources] below), NOT plain PyPI (which is CPU). Verified: 2.10+cu130.
    "torch>=2.7",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
# The guardrail ANALYZERS are an installed package pinned by scaffold tag (not vendored source) — an engine
# update is a one-line `devtools_ref` bump on `copier update`, no source diff in your PRs. Imports as
# `devtools` (`python -m devtools.graph …`); grimp/networkx arrive transitively. ast-grep/jscpd configs are
# located from the install via `python -m devtools.config`. Pin lives in .copier-answers.yml (devtools_ref).
devtools = ["sdlc-devtools @ git+https://github.com/dimiturtrz/sdlc-scaffold.git@v1.2.0#subdirectory=sdlc-devtools"]
export = ["onnxruntime"]   # ONNX export + parity check (train-vs-deploy skew, carried from acoustic)
features = [
    "timm>=1.0.27",
    "torchvision",
] # PatchCore feature memory bank (pretrained backbone) — install cu128 build
# models = [...]           # 3D anomaly method libs (M3DM / mmcv / spconv / pointnet2 CUDA ops) are
#                          # version-fragile and pin torch+cuda tightly — pinned here ONLY once a
#                          # method is chosen, installed into THIS isolated env (never the shared one).
all = ["pytest", "pytest-cov", "onnxruntime", "timm>=1.0.27", "torchvision",
       "sdlc-devtools @ git+https://github.com/dimiturtrz/sdlc-scaffold.git@v1.2.0#subdirectory=sdlc-devtools"]  # dev+devtools+export+features


[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["surfscan*", "core*"]

# torch + torchvision CUDA builds live on the PyTorch index, not PyPI. Pin them there explicitly so uv
# resolves the cu130 wheels (RTX 5090) instead of CPU. `explicit` = only [tool.uv.sources] packages use it.
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 120
# >>> LOCAL-SLOT: ruff-exclude — edit freely, the template will not overwrite intent here
extend-exclude = ["sim", "docs", "learning", "research", "interpretations"]   # sim/ has its own isaacsim env; docs/learning/research/interpretations aren't lint targets
# <<< LOCAL-SLOT: ruff-exclude

[tool.ruff.lint]
select = ["F", "B", "I", "T201", "FBT", "BLE001", "S101", "S110", "C901", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PLC0415", "RUF100", "N", "E741", "E742", "E743", "PLR0124", "PLR1714", "PLW3301", "RUF012", "RUF005", "RUF007", "RUF010", "RUF022", "RUF046", "C408", "C420", "SIM", "PERF401", "PLW0108", "E731", "E402", "ICN001", "S603", "S607", "PTH123"]
ignore = [
    # jaxtyping shape strings are deliberate runtime-checked annotations that ruff's forward-ref parser
    # misreads (jaxtyping's own FAQ prescribes disabling both): F722 = a multi-token dim string
    # `Float[Tensor, "b c h w"]` (invalid forward-ref syntax); F821 = a single-axis `Float[Tensor, "n"]`
    # (a valid forward-ref to the undefined name `n`). Needed so a 1-D shape passes the now-blocking
    # shape-contracts gate (bd kqk) — the shape gate REQUIRES an annotation the lint would otherwise reject.
    "F722",
    "F821",
]

# pep8-naming (N): case convention is a UNIVERSAL rule; the allowlisted idioms are per-repo FACTS. Every
# name that carries a meaning renames — only symbols with no honest descriptive form belong here (a dodge
# makes the gate useless).
[tool.ruff.lint.pep8-naming]
# >>> LOCAL-SLOT: pep8-naming — ignore-names VOCAB (this repo's ML/physics idioms); the block is shared,
# only its contents differ. Add domain symbols (MRI T1/T2/TR/PD, canonical lib aliases…) here.
ignore-names = ["X*", "Y*", "B", "C", "H", "W", "F"]
# <<< LOCAL-SLOT: pep8-naming

[tool.ruff.lint.per-file-ignores]
# Tests get a wider carve-out: literal fixtures (PLR2004) + bool flags (FBT); mock classes mirror external
# PascalCase APIs + local math/alias scratch (N8xx); fixtures take many params (PLR0913). The SUBSTANTIVE
# gates (imports-at-top, real bugs, dead code) still apply to tests. (SLF001 is no longer enforced anywhere
# — moved to the advisory surface, bd 8ex — so it needs no tests carve-out.)
"__init__.py" = ["F401"]
"tests/**" = ["S101", "PLR2004", "FBT", "N801", "N802", "N803", "N806", "N812", "PLR0913"]
# >>> LOCAL-SLOT: per-file-ignores — repo-specific file carve-outs (e.g. a best-effort telemetry shell
# that must never raise). Add lines here; copier update won't overwrite this region.
# <<< LOCAL-SLOT: per-file-ignores

[tool.vulture]
min_confidence = 60
ignore_decorators = ["@model_validator", "@field_validator", "@field_serializer", "@model_serializer", "@computed_field"]
# ignore_names = symbols vulture must treat as USED — each IS referenced, but through a path its static
# name-match can't follow (framework dispatch, iteration, string keys, external-lib attribute). NOT a
# "don't care" list — a FACT VOCAB, per-repo, parallel to the pep8-naming slot (bd fy5). `model_config`
# is the universal pydantic base (metaclass-read); add this repo's documented FPs below.
# >>> LOCAL-SLOT: vulture-ignore-names — this repo's documented dead-code false positives
ignore_names = ["model_config"]
# <<< LOCAL-SLOT: vulture-ignore-names
# >>> LOCAL-SLOT: vulture-scan — edit freely, the template will not overwrite intent here
paths = ["core", "surfscan"]
exclude = ["sim"]
# <<< LOCAL-SLOT: vulture-scan

[tool.coverage.run]
# >>> LOCAL-SLOT: coverage-scan — edit freely, the template will not overwrite intent here
# omit whole-file dependency boundaries — files with no unit-testable logic left in-file because the pure
# core is extracted out and tested (experiments/ = GPU+data CLI runners; visualization/ = render/IO;
# patchcore/feat_recon import torchvision; evaluate = mlflow+GPU glue; run/viz = torchvision entry shells).
# Honesty rule: never omit a module to DODGE pure logic — extract the core and test it, then omit the shell.
source = ["core", "surfscan"]
omit = ["surfscan/experiments/*", "surfscan/visualization/*",
        "surfscan/models/patchcore.py", "surfscan/models/feat_recon.py",
        # pure nn.Module architecture defs (no unit-testable logic; forward exercised via scoring/integration)
        "surfscan/models/feat_ae.py", "surfscan/models/inpaint.py",
        "surfscan/models/pointmae.py", "surfscan/models/vae.py",
        "core/method.py",                       # NamedTuple contracts only (ScoreArrays / Method), no logic
        "surfscan/evaluation/evaluate.py", "surfscan/evaluation/recompute.py",  # mlflow load/CLI glue; cores tested
        "surfscan/report.py", "surfscan/run.py", "surfscan/viz.py"]  # entry-point SPEC/registry shells
# <<< LOCAL-SLOT: coverage-scan

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "^\\s*\\.\\.\\.$",
    "@(abc\\.)?abstractmethod",
]


# Directional layer gate (import-linter): forbidden-import CONTRACTS graph.py can't express — a one-way
# `core -> surfscan` import is no cycle, so it passes the graph gate but must fail here. The gate is
# universal (all house repos run it); the SCOPE + contracts are project-local, hence the slot.
# >>> LOCAL-SLOT: import-contracts — layering scope + your directional rules. `root_packages` is the set
# import-linter analyses (defaults to `packages`; widen it if a scope-only package such as a viewer carries
# layer rules but isn't in the arch set). Ships the kernel-independence starter (the FIRST package imports
# none of the others), the pattern all 3 house repos share. Add viewer/trainer or domain contracts below;
# edit freely — copier update won't overwrite this region.
[tool.importlinter]
root_packages = ["core", "surfscan"]

[[tool.importlinter.contracts]]
name = "core is an independent kernel (imports no surfscan)"
type = "forbidden"
source_modules = ["core"]
forbidden_modules = ["surfscan"]
# <<< LOCAL-SLOT: import-contracts


# Architecture fitness thresholds read by devtools/graph.py --assert.
[tool.structure]
# >>> LOCAL-SLOT: arch-thresholds — tune per repo; the template ships defaults and won't churn these,
# so a per-project override survives `copier update` without a merge conflict.
bottleneck_degree = 8    # fan-in AND fan-out both over this = god-module
file_max = 750           # god-file line ceiling — raise as real files grow
file_min = 0             # advisory line floor — 0 = OFF (small files are SSOT/strategy/shared-vocab leaves)
betweenness_max = 0.10   # advisory chokepoint threshold
main_sequence_max = 0.0  # advisory Martin main-sequence distance |A+I-1| ceiling — 0 = OFF (a concrete
                         # stable leaf legitimately sits at D≈1, so no honest universal floor; raise per repo)
test_layout = "mirror"   # every logic module needs a unit test: "mirror" = tests/unit/<pkg>/<path>/test_<name>.py
                         # (strict, one home); "flat" = test_<name>.py anywhere under tests/; "off" = no check
# <<< LOCAL-SLOT: arch-thresholds

# magic-literals ENFORCED ratchet (devtools/magic_literals.py) — the recurring-string / repeated-key-set
# floor is frozen as a ceiling; a NEW magic literal pushes the count over and fails the merge (migrate it
# to a StrEnum/constant, or raise the ceiling in the same commit with a reason). The MECHANISM is a base
# gate (all repos run it enforced); the NUMBERS are a per-repo FACT (each repo's legitimate non-enum-able
# floor differs — column names, framework vocab, path segments). A fresh repo ships 0/0 and ratchets up.
[tool.magic_literals]
# >>> LOCAL-SLOT: magic-ceilings — this repo's frozen literal floor (raise only with a documented reason)
# Floor set by the v0.16 detector (v0.13's was blind to these). The 15 strings are the domain's
# non-enum-able vocab: split names (train/test), channel/modality names (rgb/xyz), device (cuda),
# metric-column keys (au_pro/img_auroc/label/split/category), encoding (utf-8), path/project segments
# (surfscan/data/docs), and the "nan" sentinel — column-names + framework vocab, not magic numbers.
max_strings = 15
# 3 metric-dict key-sets ({au_pro,img_auroc} ×3, {au_pro_mean,img_auroc_mean} ×2, {cats,method} ×2) are
# genuine TypedDict/dataclass candidates — tracked in synthscape-e7k (metric result dataclass).
max_key_sets = 3
# <<< LOCAL-SLOT: magic-ceilings

# Shape-contract gate (devtools/shape_contracts.py) — a public array/tensor boundary must carry a
# jaxtyping shape, not a bare `np.ndarray`/`Tensor`. The universal `ndarray`/`Tensor` are builtin; a
# repo's own array ALIASES (its core.types names that also mean "an array") are the FACT that varies.
[tool.shape_contracts]
# >>> LOCAL-SLOT: shape-aliases — this repo's array-alias type names (e.g. Volume, Mask, Image, Batch)
array_aliases = []
# <<< LOCAL-SLOT: shape-aliases

